2013-11-23  Andy Buckley  <andy.buckley@cern.ch>

	* New analyses: ATLAS_2011_I930220, ATLAS_2012_I1093734,
	ATLAS_2012_I1204784, CMS_2013_I1224539_{DIJET,WJET,ZJET},
	CMS_2013_I1258128, LHCB_2013_I1208105, and LHCB_2013_I1218996.
	The three-part CMS jet mass analysis is only installed if using FastJet3.

2013-11-22  Andy Buckley  <andy.buckley@cern.ch>

	* Updated version of ATLAS_2011_I945498.

2013-10-24  Andy Buckley  <andy.buckley@cern.ch>

	* Adding zsh completion via the bash completion compatibility mechanism.

2013-10-06  Andy Buckley  <andy.buckley@cern.ch>

	* Improvements to the root2flat script from Karl Nordstrom.

2013-09-22  Andy Buckley  <andy.buckley@cern.ch>

	* Backporting the Rivet ref bin connection line fix from trunk.

	* Updating Rivet 1.x bundled yaml-cpp version to 0.3.0, for
	compatibility with Rivet 2.x, in anticipation of *one* last 1.x
	release.

2013-05-29  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* rivet-rmgaps bugfix

	* added ATLAS_2012_I1094564 jet substructure analysis

2013-04-11  Andy Buckley  <andy.buckley@cern.ch>

	* Rivet 1.8.3 release!

2013-03-22  Andy Buckley  <andy.buckley@cern.ch>

	* Version bump to 1.8.3 for incipient release.

	* Adding Particle::fromDecay() method.

2013-03-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fixing a symbol misnaming in ATLAS_2012_I1119557.

2013-03-08  Andy Buckley  <andy.buckley@cern.ch>

	* Protect the AIDA reader against finding XML comments.

2013-03-06  Hendrik Hoeth <hendrik.hoeth@cern.ch>

	* Added ATLAS_2012_I1125575 analysis

2013-02-05  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* include/Rivet/Math/MathUtils.hh: added BWspace bin edge method
	to give equal-area Breit-Wigner bins

2013-02-01  Andy Buckley  <andy.buckley@cern.ch>

	* Adding an element to the PhiMapping enum and a new mapAngle(angle, mapping) function.

	* Fixes to Vector3::azimuthalAngle and Vector3::polarAngle calculation (using the mapAngle functions).
