@@ -1,3 +1,12 @@
+2013-11-27  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding a default=false useDecayPhotons argument to the
+	LeptonClusters, ZFinder, and WFinder constructors (Z/WFinder pass
+	it on to LeptonClusters) and using it in the LeptonClusters
+	project() method. This means that by default in the next/final
+	Rivet 1.x version the W/Z finders will not include photons
+	clustered from e.g. pi0 -> gamma gamma decays by default.
+
 2013-11-23  Andy Buckley  <andy.buckley@cern.ch>
 
 	* New analyses: ATLAS_2011_I930220, ATLAS_2012_I1093734,
